Created group analysis. Added Dennison and Matthew's data and maps to group analysis. Created ranking dataframe.

--- a/housing-conditions-beller/housing-conditions-analysis.ipynb
+++ b/housing-conditions-beller/housing-conditions-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,17 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "poorHousing = pd.read_csv(\"housing-conditions-beller/poorhousingconditions.csv\")\n",
+    "poor_housing_data = pd.read_csv(\"poorhousingconditions.csv\")\n",
     "neighborhoods = geopandas.read_file(\"Neighborhoods/Neighborhoods_.shp\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,34 +35,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "poorHousingMap = neighborhoods.merge(poorHousing, how='left', left_on='tractce10', right_on='TRACT')"
+    "poor_housing_map = neighborhoods.merge(poor_housing_data, how='left', left_on='tractce10', right_on='TRACT')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "poorHousingMap = GeoDataFrame(poorHousingMap)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f3d068099d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f4ffa6f3280>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -80,7 +71,7 @@
     }
    ],
    "source": [
-    "poorHousingMap.plot(column='PPoorCon', # set the data to be used for coloring\n",
+    "poor_housing_map.plot(column='PPoorCon', # set the data to be used for coloring\n",
     "               cmap='RdYlGn_r',              # choose a color palette\n",
     "               edgecolor=\"white\",        # outline the districts in white\n",
     "               legend=True,              # show the legend\n",
