traffic-count-taylor

--- a/group-analysis/group-notebook.ipynb
+++ b/group-analysis/group-notebook.ipynb
@@ -22,6 +22,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dennison (Crime)\n",
+    "    Introduction: For this submetric, I'm going to focus on crime/overall safety of each neighborhood. While some alternatives were explored such as the Jail census or the number of arrests, I eventually settled on the \"Blotter Data\", or number of crime reports in each neighborhood. While this submetric may seem boring and unoriginal, when determining the quality of a neighborhood, crime is such an important factor that it can't be ignored. \n",
+    "\n",
+    "    The Metric: The metric I’m using is the number of observations of crime in each neighborhood. It will be measured using the blotter dataset from the WPRDC, and it contains crime reports in each neighborhood since 1/1/2016. I’m going to keep track of the observations of crime in each neighborhood and compare the frequencies; the neighborhood with the fewest number of observations will be deemed the safest. Once I had the data in this format, I converted it into a map using geopandas and the shapefile on the WPRDC website. Then, I made some customizations to the map which would best fit the purpose. \n",
+    "\n",
+    "    The Best Neighborhood: According to this crime metric only, the best neighborhood in Pittsburgh would be Mt. Oliver Boro, with only 86 reported crimes since 2016, which is the lowest observation count. It is the best neighborhood from a pure safety standpoint as crime is very infrequent. On the other hand, the neighborhood with the most crime observations would be the South Side Flats, with 15843 crimes since 2016; definitely way more dangerous than the previous. \n",
+    "\n",
+    "    Conclusion: The data driven determination of the “best neighborhood” is different from my personal favorite neighborhood in the Greater Pittsburgh Area, as it only takes into consideration the crime count. While crime is still considered, in contrast, my personal favorite neighborhood takes other factors into account such as location/convenience, traffic, and sanitation. However, Mt. Oliver Boro is still a solid choice, and the data driven result is still optimal.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -248,6 +262,20 @@
     "crime_neighborhood_counts.sort_values(by=['crimeRank'], inplace=True)\n",
     "crime_neighborhood_counts['hood'] = crime_neighborhood_counts.index\n",
     "crime_neighborhood_counts.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Jackson (Traffic)\n",
+    "    Introduction: Our group is going to be analyzing what the best neighborhood in Pittsburgh is from an objective and practical standpoint. I will be focusing on traffic counts, this means what neighborhoods are more likely to be filled with bad traffic and amount of speeding done within those neighborhoods. The ability to see how much traffic is in each neighborhood can greatly help determine what areas of Pittsburgh you want to steer clear of.\n",
+    "\n",
+    "    Metrics: The dataset used is Traffic Count data, this is a list of reported counts of high traffic and counts of speeding, and how much each count was speeding by. The data was started in 1/1/2019 and is updated to this day.\n",
+    "\n",
+    "    Best Neighborhood: The best neighborhood according to my ranking would be South Side Flats, this is due to it's extremely low rated score of 115 counts of traffic each day, much ahead of the pack, with these low traffic rates it really shows how good it would be for family welfare, with less traffic that would lead to less chances for car crashes and other traffic related events.\n",
+    "    \n",
+    "    Conclusion: I believe South Side Flats is a pretty good overall neighborhood although it is not my personal top choice, this is due to South Side Flats having a horrendous crime rate. My personal favorite neighborhood in Pittsburgh is Oakland as it is all I really know being here on campus."
    ]
   },
   {
@@ -910,6 +938,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Best Neighborhood\n",
+    "We found the best neighborhood in Pittsburgh to be New Homestead. We believe this to be true for many reasons. To start, New Homestead is tied for the very best in terms of housing conditions, allowing for a families’ welfare to be in top shape. Still being up there in ranking in the other two metrics as well. New Homestead is the 6th lowest neighborhood for the amount of traffic that comes up, greatly decreasing the likelihood for car crashes and other dangerous events that can have an impact on a families’ welfare. Lastly with crime rates, it is the 8th lowest crime rate out of the neighborhoods in Pittsburgh, showing how safe your family will be.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -1000,14 +1036,6 @@
    ],
    "source": [
     "best_neighborhood.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Best Neighborhood\n",
-    "We found the best neighborhood in Pittsburgh to be New Homestead. We believe this to be true for many reasons. To start, New Homestead is tied for the very best in terms of housing conditions, allowing for a families’ welfare to be in top shape. Still being up there in ranking in the other two metrics as well. New Homestead is the 6th lowest neighborhood for the amount of traffic that comes up, greatly decreasing the likelihood for car crashes and other dangerous events that can have an impact on a families’ welfare. Lastly with crime rates, it is the 8th lowest crime rate out of the neighborhoods in Pittsburgh, showing how safe your family will be.\n"
    ]
   },
   {
